# mc_vs_plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
etc/: VisualServoingPlugin.yaml
src/: VisualServoingPlugin.cpp  VisualServoingPlugin.h
tests/etc/: mc_rtc.yaml
